# mclient-mume

./: ProjectHome.md
branches/cuantar/plugin_skeleton/: CMakeLists.txt  build.sh  plugin_skeleton.kdevelop  plugin_skeleton.kdevelop.filelist  runme
branches/cuantar/plugin_skeleton/config/: socketmanagerio.xml
branches/cuantar/plugin_skeleton/src/: CMakeLists.txt  plugin_skeleton.cpp
branches/cuantar/plugin_skeleton/src/mclientplugin/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  MClientDataFilter.h  MClientDisplayInterface.h  MClientDisplayPlugin.h  MClientEvent.cpp  MClientEvent.h  MClientEventData.cpp  MClientFilterInterface.h  MClientPlugin.cpp  MClientPlugin.h  MClientPluginInterface.h  PluginConfigWidget.cpp  PluginManager.cpp  PluginManager.h
branches/cuantar/plugin_skeleton/src/mumexml/: MumeXML.cpp  MumeXML.h
branches/cuantar/plugin_skeleton/src/simpletestdisplay/: CMakeLists.txt  ClientTextEdit.cpp  ClientTextEdit.h  ClientWidget.cpp  ClientWidget.h  PowwowWrapper.h  SimpleTest.cpp  SimpleTest.h  SimpleTestDisplay.cpp  SimpleTestDisplay.h
branches/cuantar/plugin_skeleton/src/socketdatafilter/: CMakeLists.txt  MumeXML.cpp  SocketData.cpp  SocketData.h  SocketDataFilter.cpp  SocketDataFilter.h
branches/cuantar/plugin_skeleton/src/socketmanagerio/: CMakeLists.txt  SocketManagerIO.cpp  SocketManagerIO.h  SocketReader.cpp  SocketReader.h
branches/cuantar/plugin_skeleton/src/telnet/: CMakeLists.txt  Telnet.cpp  Telnet.h
branches/cuantar/shop_test/moc/: Makefile.am
branches/cuantar/shop_test/src/: Makefile.am  server.cpp  shop.cpp  tokenize.cpp
branches/cuantar/skeleton/src/: ClientLineEdit.h  ClientSocket.cpp  ClientSocket.h  ClientWidget.cpp  Makefile.am
branches/cuantar/skeleton/src/plugins/: FilterPluginInterface.h  InputPluginInterface.h  SimpleInputPlugin.h
branches/jahara/mclient/src/: CMakeLists.txt  main.cpp
branches/jahara/mclient/src/commandmanager/: CMakeLists.txt  CommandManager.cpp  ScriptEvaluator.h  ScriptMemory.h
branches/jahara/mclient/src/mainwindow/: ActionManager.cpp  MainWindow.cpp  MainWindow.h  MainWindow.qrc
branches/jahara/mclient/src/mclientplugin/: CMakeLists.txt  MClientPlugin.cpp  PluginManager.cpp  PluginManager.h
branches/jahara/mclient/src/mumexml/: MumeXML.cpp
branches/jahara/mclient/src/simplelineinput/: SimpleLineInput.cpp
branches/jahara/mclient/src/simpletestdisplay/: ClientWidget.cpp  ClientWidget.h  SimpleTestDisplay.cpp  SimpleTestDisplay.h
branches/jahara/mclient/src/socketmanagerio/: SocketManagerIO.cpp  SocketManagerIO.h  SocketReader.cpp  SocketReader.h
branches/jahara/mclient/src/telnet/: Telnet.cpp
branches/jahara/mclient/src/webkitdisplay/: DisplayWidget.cpp  WebKitDisplay.cpp  WebKitDisplay.h
branches/jahara/mclient/src/webkitdisplay/resources/: page.html
branches/jahara/reference_demo/src/simpletestdisplay/: CMakeLists.txt  ClientTextEdit.cpp  ClientTextEdit.h  ClientWidget.h
mclient/: CMakeLists.txt  build.sh
mclient/config/: socketmanagerio.xml  socketmanagerio_new.xml
mclient/src/: CMakeLists.txt  main.cpp
mclient/src/commandmanager/: CommandManager.cpp  CommandManager.h  ScriptEvaluator.cpp  ScriptMemory.cpp  ScriptStack.cpp  ScriptStack.h
mclient/src/mainwindow/: ActionManager.cpp  CMakeLists.txt  MainWindow.cpp
mclient/src/mclientplugin/: MClientDisplayInterface.h  MClientPlugin.cpp  MClientPluginInterface.h  PluginManager.cpp
mclient/src/mumexml/: MumeXML.cpp
mclient/src/simplelineinput/: CMakeLists.txt  SimpleLineInput.h
mclient/src/simpletestdisplay/: ClientWidget.cpp
mclient/src/socketmanagerio/: SocketManagerIO.cpp
mclient/src/webkitdisplay/: CMakeLists.txt  WebKitDisplay.cpp  WebKitDisplay.h
mclient_lite/: CMakeLists.txt
mclient_lite/src/: main.cpp
plugin_skeleton/: CMakeLists.txt  README  build.sh  plugin_skeleton.kdevelop  plugin_skeleton.kdevelop.pcs  runme
plugin_skeleton/config/: socketmanagerio.xml
plugin_skeleton/src/: CMakeLists.txt  plugin_skeleton.cpp  plugintest.cpp
plugin_skeleton/src/mclientplugin/: CMakeLists.txt  ConfigManager.h  MClientDisplayPlugin.cpp  MClientDisplayPlugin.h  MClientEvent.cpp  MClientEvent.h  MClientEventData.cpp  MClientEventData.h  MClientIOInterface.h  MClientIOPlugin.cpp  MClientIOPlugin.h  MClientPlugin.cpp  MClientPlugin.h  MClientPluginInterface.h  PluginConfigWidget.cpp  PluginConfigWidget.h  PluginManager.cpp  PluginManager.h
plugin_skeleton/src/mumexml/: MumeXML.cpp  MumeXML.h
plugin_skeleton/src/simpletestdisplay/: CMakeLists.txt  ClientTextEdit.cpp  ClientTextEdit.h  ClientWidget.cpp  ClientWidget.h  SimpleTestDisplay.cpp  SimpleTestDisplay.h
plugin_skeleton/src/socketdatafilter/: CMakeLists.txt  MumeXML.cpp  SocketData.cpp  SocketData.h  SocketDataFilter.cpp  SocketDataFilter.h
plugin_skeleton/src/socketmanagerio/: CMakeLists.txt  SocketManagerIO.cpp  SocketManagerIO.h  SocketReader.cpp  SocketReader.h
plugin_skeleton/src/telnet/: Telnet.cpp
proxy/: proxy.py
reference_demo/config/: socketmanagerio.xml
reference_demo/src/: plugin_skeleton.cpp
shop_test/: Makedef.in  configure.ac
shop_test/output/: bar_list.txt  captain_list.txt  cleric_prac.txt  gildor_list_1594.txt  mage_prac.txt
shop_test/src/: Makefile.am  mainwindow.cpp
simple_client/: Makefile.am
simple_client/aux/: autotroll.m4
simple_client/moc/: Makefile.am  Makefile.in
simple_client/src/: ClientLineEdit.cpp  ClientSocket.cpp  ClientTextEdit.cpp  ClientWidget.cpp  ClientWidget.h  Makefile.am  Makefile.in  PowwowWrapper.cpp  PowwowWrapper.h  main.cpp
skeleton/: NOTES  configure.ac
skeleton/moc/: Makefile.am
skeleton/src/plugins/: Makefile.am  Makefile.in  OutputPluginInterface.h  SimpleInputPlugin.h
src/: main.cpp  mclient.kdevelop  mclient.pro
src/powwow/: beam.c  (+15 more)
tellnotifier/: mumetellnotifier.notifyrc
trunk/: Doxyfile
trunk/simple_client/: Makefile.am  configure.ac
trunk/simple_client/moc/: Makefile.am
trunk/simple_client/src/: ClientSocket.h  ClientTextEdit.h  ClientWidget.cpp  ClientWidget.h  Makefile.am  PowwowWrapper.cpp  PowwowWrapper.h  main.cpp
wiki/: PowwowHelp.wiki
(+300 files in other folders)
